python-algo-def-4/errorFile114-08-2022-11-12-43-1660489963698--1934847252.txt
  File "/home/eli/projects/c1-terminal/c1terminal-algo/python-algo-def-4/algo_strategy.py", line 181
    self.attack(game_state, best_spawn, best_config, score):
                                                           ^
SyntaxError: invalid syntax
